image spacing fixed

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -170,6 +170,7 @@ blockquote {
 
 .endorsements > img {
   width: 200px;
+  margin: 10px;
 }
 
 .thumbnail.right-caption > img {
